--- a/src/index.css
+++ b/src/index.css
@@ -299,7 +299,7 @@ ul {
 .item-info{
   background-color: wheat;
 
-  height: 10.93rem;
+  min-height: 10.93rem;
 
   
   
@@ -310,7 +310,7 @@ ul {
 
 .item-img{
   width: 100%;
-  height: 10rem;
+  max-height: 10rem;
 
 
 }
